[package]
name = "randomizer-core"
version = "1.0.0"
description = "Randomizer core library"
edition = "2021"
authors = ["Oyashiro"]
license = "MIT OR Apache-2.0"

[dependencies]
bass-sys = "2.2.2"
directories = "4.0.1"
getset = "0.1.2"
log = "0.4.17"
log-panics = { version = "2.1.0" }
log4rs = "1.2.0"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["sync", "time"] }
toml = "0.7.2"
walkdir = "2.3.2"
widestring = "1.0.2"
