[package]
name = "randomizer"
version = "1.0.0"
description = "Simple randomizer"
authors = ["Oyashiro"]
license = "MIT OR Apache-2.0"
repository = ""
default-run = "randomizer"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
fs_extra = "1.3.0"
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.69"
bass-sys = "2.2.2"
directories = "4.0.1"
getset = "0.1.2"
log = "0.4.17"
log-panics = { version = "2.1.0" }
log4rs = "1.2.0"
mime_guess = "2.0.4"
once_cell = "1.17.1"
percent-encoding = "2.2.0"
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2.4", features = ["clipboard-write-text", "objc-exception", "window-set-fullscreen", "wry"], default-features = false }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["time"] }
toml = "0.7.2"
walkdir = "2.3.2"
widestring = "1.0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
