[package]
name = "randomizer"
version = "1.0.0"
description = "UI for randomizer built with Tauri"
authors = ["Oyashiro"]
license = "MIT OR Apache-2.0"
default-run = "randomizer"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
fs_extra = "1.3.0"
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-write-text", "objc-exception", "window-set-fullscreen", "wry"], default-features = false }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["time"] }

randomizer-core = { path = "../randomizer-core" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
